# pipelines

./: Dockerfile  TODO.md  docker-compose.yaml  pyproject.toml  start_poetry.sh  test_pipelines.sh
.github/workflows/: push.yml
MeetDagster/: README.md  pyproject.toml
MeetDagster/meetdagster/: run_dagster.py
MeetDagster/tmptuer1jcm/history/: runs.db
MeetDagster/tmptuer1jcm/history/runs/: index.db
MeetDagster/tmptuer1jcm/schedules/: schedules.db
MeetPrefect/: README.md  pyproject.toml
MeetPrefect/prefect_project/: run_prefect.py
Pipelines/: README.md
Pipelines/main/pipelines_scripts/: main_commands.py
Pipelines/main/scripts/: cli_commands.py
Pipelines_sitnikovare/: pyproject.toml
example_pipeline/: pipeline.py
example_pipeline/output/: norm  norm.csv
original/: original.csv
output/: norm.csv
pipelines/: dbmanager.py  tasks.py
pipelines/database/: sqlite_080323.db
pipelines/dbmanager/: dbmanager.py
pipelines/dbmanager/database/: sqlite_080323.db
test/: cleanup.py  tasks_test.py
test/original/: original_test.csv
test/output/: empty.txt
