[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Leonid Shvechikov <shvechikov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pipelines" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.5.3"
pytest = "^7.2.2"

[tool.poetry.scripts]
pipeline = "pipelines.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
